# pudding

./: README.md  cookiecutter.json  ruff.toml
.github/workflows/: cookiecutter_config.yml  test.yml
bioproject/: cookiecutter.json
bioproject/{{ cookiecutter.project_slug }}/: README.md  pixi.toml  run.py
bioproject/{{ cookiecutter.project_slug }}/conf/: env.yml  smk_config.yml
bioproject/{{ cookiecutter.project_slug }}/scripts/: .mplstyle  workflow_functions.py
bioproject/{{ cookiecutter.project_slug }}/workflows/: workflow.smk
hooks/: post_gen_project.py
nfproject/{{ cookiecutter.project_slug }}/: README.md  pixi.toml
pyproject/docs/: conf.py  index.rst
pyproject/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/: README.md  run.py
{{ cookiecutter.project_slug }}/conf/: env.yml
{{ cookiecutter.project_slug }}/scripts/: workflow_functions.py
