[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
description = ""
readme = "README.md"
dynamic = ["version"]
keywords = []
authors = [
  {name = "WardDeb", email = 'w@rddeboutte.com'}
]
requires-python = ">={{ cookiecutter.python}}"
dependencies = [
  "rich-click"
]
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-click"
]

[project.scripts]

[tool.setuptools_scm]
fallback_version = "0.0.1"
[tool.ruff]
exclude = [
  "docs",
  "tests"
]
[tool.pixi.workspace]
channels = ['conda-forge', 'bioconda']
platforms = ['linux-64', 'osx-arm64', 'osx-64']
[tool.pixi.pypi-dependencies]
{{ cookiecutter.project_slug }} = {path = ".", editable = true, extras = ['dev']}